--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,10 +1,18 @@
 .selectTest {
-    padding: 0.3rem 3rem;
+    padding: 0.3rem 3rem 1rem 3rem;
     margin: 0.5rem 3rem;
 
     box-shadow: 2px 3px 5px black;
     background-color: #bbb;
     text-align: left;
+}
+
+.testQuestions {
+    padding: 0 0 1rem 0;
+    margin: 0.5rem 3rem;
+
+    box-shadow: 2px 3px 5px black;
+    background-color: #bbb;
 }
 
 label {
@@ -31,7 +39,7 @@ select {
 }
 
 button {
-    margin: 0 auto 1rem auto;
+    margin: 0 auto 0 auto;
     display: block;
     padding: 0.5rem 0;
 
